# nextjs-wasm-bug

./: .gitignore  README.md  WORKSPACE
my-app/: next.config.js
my-app/pages/: index.js
wasm-lib/: BUILD.bazel
